--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <!-- these are event listeners -->
+  <app-cockpit 
+    (serverCreated)="onServerAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)">
+  </app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element *ngFor="let element of serverElements"></app-server-element>
+      <app-server-element 
+        *ngFor="let element of serverElements"
+        [srvElement]="element"></app-server-element>
     </div>
   </div>
 </div>
