--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,28 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change first element</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy first element</button>
       <app-server-element 
         *ngFor="let element of serverElements"
-        [srvElement]="element">
-        <p>
+        [srvElement]="element"
+        [name]="element.name">
+        <p #contentParagraph>
           <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
           <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>
         </p>
       </app-server-element>
+    <div class="row">
+      <div class="col-xs-12">
+          <app-game-control (intervalFired)="onIntervalFired($event)"></app-game-control>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+          <app-odd *ngFor="let oNumber of oddNumbers" [number]="oNumber"></app-odd>
+          <app-even *ngFor="let eNumber of evenNumbers" [number]="eNumber"></app-even>
+      </div>
+    </div>
     </div>
   </div>
 </div>
